Updated the sagemaker notebook

--- a/01_Train, Deploy and Update a Huggingface BERT model/BERT-Disaster-Tweets-Prediction.ipynb
+++ b/01_Train, Deploy and Update a Huggingface BERT model/BERT-Disaster-Tweets-Prediction.ipynb
@@ -40,7 +40,7 @@
     "8. [Host the model on an Amazon SageMaker Endpoint](#8.0)\n",
     "9. [Train on Amazon SageMaker using on-demand instances with Epoch=3](#9.0)\n",
     "10. [Update a SageMaker model endpoint](#10.0)\n",
-    "11. [Cleanup](#11.0)\n",
+    "11. [Clean up](#11.0)\n",
     "12. [Conclusion and references](#11.0)"
    ]
   },
@@ -1024,8 +1024,6 @@
     "* `source_dir`: the location of our training scripts and requirements.txt file. \"requirements.txt\" lists packages you want to use with your script.\n",
     "* `framework_version`: the PyTorch version we want to use\n",
     "\n",
-    "The PyTorch estimator supports multi-machine, distributed PyTorch training. To use this, we just set train_instance_count to be greater than one. Our training script supports distributed training for only GPU instances. \n",
-    "\n",
     "After creating the estimator, we then call fit(), which launches a training job. We use the Amazon S3 URIs where we uploaded the training data earlier.\n",
     "\n",
     "<img src = \"img/sm-estimator.png\" >"
@@ -1035,7 +1033,8 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -1551,7 +1550,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<a id = '7.0'></a>\n",
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> 7. Train on Amazon SageMaker using spot instances </h2>"
@@ -2735,7 +2736,13 @@
    "metadata": {},
    "source": [
     "<a id = '10.0'></a>\n",
-    "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> 10. Update a SageMaker model endpoint </h2>"
+    "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> 10. Update a SageMaker model endpoint </h2>\n",
+    "\n",
+    "As we know Machine Learning is a highly iterative process. During the course of a single project, data scientists and ML engineers routinely train thousands of different models in search of maximum accuracy. Indeed, the number of combinations for algorithms, data sets, and training parameters (aka hyperparameters) is infinite.\n",
+    "\n",
+    "For example, let’s train a BERT model with updated hyperparameter (epoch = 3) value and see if model performance is improved or not.\n",
+    "\n",
+    "If we find the improvement in model performance then we can update the existing SageMaker model endpoint."
    ]
   },
   {
@@ -3009,7 +3016,7 @@
    "metadata": {},
    "source": [
     "<a id = '11.0'></a>\n",
-    "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> 11. Cleanup </h2>\n",
+    "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> 11. Clean up </h2>\n",
     "\n",
     "Lastly, please remember to delete the Amazon SageMaker endpoint to avoid charges:"
    ]
