Multi-Model Endpoints with Hugging Face Transformers

--- a/02_MultiModelEndpointWithHuggingFace/huggingface-sagemaker-multi-model-endpoint.ipynb
+++ b/02_MultiModelEndpointWithHuggingFace/huggingface-sagemaker-multi-model-endpoint.ipynb
@@ -20,13 +20,31 @@
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Deploy multiple Transformer models to the same Amazon SageMaker Infrastructure </h2>\n",
     "\n",
-    "With [Amazon SageMaker multi-model endpoints](https://docs.aws.amazon.com/sagemaker/latest/dg/multi-model-endpoints.html), customers can create an endpoint that seamlessly hosts up to thousands of models. These endpoints are well suited to use cases where any one of many models, which can be served from a common inference container, needs to be callable on-demand and where it is acceptable for infrequently invoked models to incur some additional latency. For applications which require consistently low inference latency, a traditional endpoint is still the best choice.\n",
+    "We can hosts up to thousands of models with [Amazon SageMaker multi-model endpoints](https://docs.aws.amazon.com/sagemaker/latest/dg/multi-model-endpoints.html).\n",
     "\n",
-    "At a high level, Amazon SageMaker manages the loading and unloading of models for a multi-model endpoint, as they are needed. When an invocation request is made for a particular model, Amazon SageMaker routes the request to an instance assigned to that model, downloads the model artifacts from S3 onto that instance, and initiates loading of the model into the memory of the container. As soon as the loading is complete, Amazon SageMaker performs the requested invocation and returns the result. If the model is already loaded in memory on the selected instance, the downloading and loading steps are skipped and the invocation is performed immediately.\n",
+    "**Use cases of multi-model endpoints:**\n",
     "\n",
-    "In some cases where the variable latency is tolerable, and cost optimization is more important, customers may also decide to use MMEs for A/B/n testing, in place of the more typical [production variant based strategy discussed here](https://aws.amazon.com/blogs/machine-learning/a-b-testing-ml-models-in-production-using-amazon-sagemaker/).\n",
+    "- Multiple models which can be served from a common inference container, can be invoked on-demand and we experience some additional latency for infrequently invoked models.\n",
+    "- In some cases where the variable latency is tolerable, and cost optimization is more important, we may also decide to use MMEs for A/B/n testing, in place of the more typical production variant based strategy discussed here.\n",
     "\n",
-    "For the inference container to serve multiple models in a multi-model endpoint, it must implement [additional APIs](https://docs.aws.amazon.com/sagemaker/latest/dg/build-multi-model-build-container.html) in order to load, list, get, unload and invoke specific models.\n",
+    "**How multi-model endpoints work?**\n",
+    "\n",
+    "Amazon SageMaker takes care of the loading and unloading of models for a multi-model endpoint in the container’s memory, as they are invoked. When SageMaker receives an inference request for a particular model, it does the following.\n",
+    "\n",
+    "1. Routes the request to an instance assigned to that model.\n",
+    "2. Instead of downloading all of the models from an Amazon S3 bucket to the container, SageMaker downloads only the invoked model from S3 bucket to that instance’s storage volume.\n",
+    "3. Also loads the model to the container’s memory on that instance. If the model is already loaded in the container’s memory then invocation is performed immediately because SageMaker already downloaded that model and loaded it.\n",
+    "\n",
+    "Let’s say SageMaker has already loaded 100 models and needs to load another model into memory but instance’s memory utilization is high then what next?\n",
+    "\n",
+    "1. SageMaker unloads unused models from that instance’s container memory to ensure that there is enough memory to load the model.\n",
+    "2. Models which are unloaded remain on the instance’s storage volume and can be loaded into the container’s memory later without being downloaded again from the S3 bucket.\n",
+    "\n",
+    "What if the instance’s storage volume reaches its capacity?\n",
+    "\n",
+    "Then SageMaker deletes the all unused models from the instance storage storage volume. We see SageMaker is much smarter in loading and unloading models to the container’s memory.\n",
+    "\n",
+    "If we want to add a new model to multi-model endpoint then we upload it to S3 and invoke it. If we want to delete a existing model from multi-model endpoint then stop sending requests and delete it from S3.\n",
     "\n",
     "We will use the Hugging Face Inference DLCs and Amazon SageMaker to deploy multiple transformer models as Multi-Model Endpoint. Amazon SageMaker Multi-Model Endpoint can be used to improve endpoint utilization and optimize costs.\n",
     "\n",
@@ -34,7 +52,9 @@
     "1. Use BERT model to extract embeddings from text.\n",
     "2. Use GPT-2 model to generate synthetic text for a given text.\n",
     "\n",
-    "**NOTE**: As the time of writing this only `CPU` Instances are supported for Multi-Model Endpoint."
+    "**NOTE**: As the time of writing this only `CPU` Instances are supported for Multi-Model Endpoint.\n",
+    "\n",
+    "Please refer to [Medium article](https://medium.com/@vinayakshanawad/multi-model-endpoints-with-hugging-face-transformers-and-amazon-sagemaker-c0e5a3693fac)"
    ]
   },
   {
@@ -640,9 +660,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_latest_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_latest_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -654,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
