Adding Train, Deploy and Update a Huggingface BERT model artifacts

--- a/01_Train, Deploy and Update a Huggingface BERT model/BERT-Disaster-Tweets-Prediction.ipynb
+++ b/01_Train, Deploy and Update a Huggingface BERT model/BERT-Disaster-Tweets-Prediction.ipynb
@@ -6,14 +6,11 @@
    "source": [
     "<h3 style = \"font-size:40px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049; text-align: center; border-radius: 5px 5px; padding: 5px\">Train, Deploy and Update a HuggingFace BERT model on Disaster Tweets Classification dataset using AWS SageMaker </h3>\n",
     "\n",
+    "NLP techniques such as [tf-idf](https://en.wikipedia.org/wiki/Tf%E2%80%93idf), [word2vec](https://en.wikipedia.org/wiki/Word2vec), or [bag-of-words (BOW)](https://en.wikipedia.org/wiki/Bag-of-words_model) used to generate word embeddings features which can be used for training text classification models. They have been very successful in many NLP tasks but they don’t always capture the meanings of words accurately when they appear in different contexts.\n",
     "\n",
-    "Text classification is a technique for putting text into different categories and has a wide range of applications: email providers use text classification to detect to spam emails, marketing agencies use it for sentiment analysis of customer reviews, and moderators of discussion forums use it to detect inappropriate comments.\n",
+    "We achieved the better results in text classification tasks with the help of [BERT](https://arxiv.org/abs/1810.04805) because of its ability more accurately encode the meaning of words in different contexts.\n",
     "\n",
-    "In the past, data scientists used methods such as [tf-idf](https://en.wikipedia.org/wiki/Tf%E2%80%93idf), [word2vec](https://en.wikipedia.org/wiki/Word2vec), or [bag-of-words (BOW)](https://en.wikipedia.org/wiki/Bag-of-words_model) to generate features for training classification models. While these techniques have been very successful in many NLP tasks, they don't always capture the meanings of words accurately when they appear in different contexts. Recently, we see increasing interest in using [Bidirectional Encoder Representations from Transformers (BERT)](https://arxiv.org/abs/1810.04805) to achieve better results in text classification tasks, due to its ability more accurately encode the meaning of words in different contexts.\n",
-    "\n",
-    "BERT was trained on BookCorpus and English Wikipedia data, which contain 800 million words and 2,500 million words, respectively. Training BERT from scratch would be prohibitively expensive. By taking advantage of transfer learning, one can quickly fine tune BERT for another use case with a relatively small amount of training data to achieve state-of-the-art results for common NLP tasks, such as text classification and question answering. \n",
-    "\n",
-    "[Amazon SageMaker](https://docs.aws.amazon.com/sagemaker/index.html) is a fully managed service that provides developers and data scientists with the ability to build, train, and deploy machine learning (ML) models quickly. Amazon SageMaker removes the heavy lifting from each step of the machine learning process to make it easier to develop high-quality models. The [SageMaker Python SDK](https://sagemaker.readthedocs.io/en/stable/) provides open source APIs and containers that make it easy to train and deploy models in Amazon SageMaker with several different machine learning and deep learning frameworks.\n",
+    "[Amazon SageMaker](https://docs.aws.amazon.com/sagemaker/index.html) enables developers to create, train, deploy and monitor machine-learning models in the cloud.\n",
     "\n",
     "In this example, we walk through our dataset, the training process, and finally model deployment."
    ]
