Bring Your Own Model With Amazon SageMaker Script Mode

--- a/02_RealtimeEndpointWithHuggingFace/huggingface-sagemaker-real-time-endpoint.ipynb
+++ b/02_RealtimeEndpointWithHuggingFace/huggingface-sagemaker-real-time-endpoint.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style = \"font-size:40px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049; text-align: center; border-radius: 5px 5px; padding: 5px\"> Bring Your Own Model With Amazon SageMaker Script Mode </h3>"
+    "<h3 style = \"font-size:40px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049; text-align: center; border-radius: 5px 5px; padding: 5px\"> Bring your BERT Model to AWS SageMaker with Script Mode </h3>"
    ]
   },
   {
@@ -18,17 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In my [previous post](https://medium.com/analytics-vidhya/aws-sagemaker-train-deploy-and-update-a-hugging-face-bert-model-eeefc8211368) I have talked about how to train a HuggingFace BERT model using on-demand and spot instances, deploy that fine-tuned model on SageMaker real-time endpoint and update that endpoint as well. This makes our work easier because SageMaker supports managed training and inference for a variety of [ML frameworks](https://docs.aws.amazon.com/sagemaker/latest/dg/frameworks.html) such as XGBoost, TensorFlow, PyTorch, HuggingFace, and more.\n",
+    "In my [previous post](https://medium.com/analytics-vidhya/aws-sagemaker-train-deploy-and-update-a-hugging-face-bert-model-eeefc8211368) I have discussed about how to train a Hugging Face BERT model using on-demand and spot instances, deploy that fine-tuned model on SageMaker real-time endpoint and update that endpoint as well. This makes our work easier because SageMaker supports managed training and inference for a variety of [ML frameworks](https://docs.aws.amazon.com/sagemaker/latest/dg/frameworks.html) such as XGBoost, TensorFlow, PyTorch and HuggingFace etc.\n",
     "\n",
-    "Now let's discuss the use cases of using SageMaker script mode:\n",
+    "Now let's discuss the use cases of using SageMaker [script mode](https://sagemaker-examples.readthedocs.io/en/latest/sagemaker-script-mode/index.html):\n",
     "\n",
-    "1. When we trained a model outside of SageMaker (might have trained on local Jupyter notebook, Google colab, AWS EC2 instances and SageMaker notebook instance etc) then we can bring our fine-tuned model with custom inference script, dependent libraries (can be specified in requriments.txt file) and deploy it on SageMaker endpoints for inference.\n",
+    "1. When we trained a model outside of SageMaker (might have trained on local Jupyter notebook, Google colab, AWS EC2 instances and SageMaker notebook instance etc) then we can bring our fine-tuned model with custom inference script, dependent libraries (can be specified in requirements.txt file) and deploy it on SageMaker endpoints for inference.\n",
     "\n",
     "2. If we want to train models using a custom algorithm not supported by one of the [built-in algorithms](https://docs.aws.amazon.com/sagemaker/latest/dg/algos.html) or we want to train a model with custom training script then we can make use of script mode.\n",
-    "\n",
-    "[Script mode](https://sagemaker-examples.readthedocs.io/en/latest/sagemaker-script-mode/index.html) allows you to write custom training and inference script against commonly used ML framework containers maintained by AWS. Script mode is easy to use and extremely flexible.\n",
-    "\n",
-    "**Note**: Custom training and inference scripts needs to be compatible with the AWS maintained container, the script must meet certain design requirements.\n",
     "\n",
     "This notebook will demonstrate how to host fine-tuned BERT model with custom inference script on SageMaker real-time endpoint.\n",
     "\n",
