Pay as you use SageMaker Serverless inference with GPT-2 changes

--- a/04_ServerlessEndpointWithGPT_2/huggingface-sagemaker-serverless-endpoint.ipynb
+++ b/04_ServerlessEndpointWithGPT_2/huggingface-sagemaker-serverless-endpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e18e4a74",
+   "id": "b6e395aa",
    "metadata": {},
    "source": [
     "<h3 style = \"font-size:40px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049; text-align: center; border-radius: 5px 5px; padding: 5px\"> Pay as you use SageMaker Serverless inference with GPT-2 </h3>"
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08061473",
+   "id": "ef7fbe35",
    "metadata": {},
    "source": [
-    "<img src = \"img/Serverless.png\">"
+    "<img src = \"img/Serverless.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1556013c",
+   "id": "094f57b1",
    "metadata": {},
    "source": [
     "Huge credits 👏 to AWS team for making SageMaker Serverless inference option generally available.\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ab0556",
+   "id": "1b0651c5",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Import necessary libraries and Setup permissions </h2>\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5adf3a3d",
+   "id": "52af6716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e80e8167",
+   "id": "f86de44b",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Retrieve Model Artifacts </h2>\n",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf6c13d2",
+   "id": "9e6f8096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27cf486f",
+   "id": "2278a090",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c9a413",
+   "id": "7d82b7e5",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Write the Inference Script </h2> \n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d17f3f28",
+   "id": "b13e8423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a286ded",
+   "id": "4868bb84",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3835b4ef",
+   "id": "fcb7cfaa",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Package Model </h2> \n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8dfa2e73",
+   "id": "487ba1b9",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b0ebbb",
+   "id": "888e461a",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Upload GPT-2 model to S3 </h2> "
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7999f9f",
+   "id": "fe11efab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4de29d0",
+   "id": "513a91e1",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Create and Deploy a Serverless GPT-2 model </h2> \n",
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f09e0d2d",
+   "id": "933a1132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679444a4",
+   "id": "de7ae9bb",
    "metadata": {},
    "source": [
     "Next we will create a SageMaker model, endpoint config and endpoint. We have to specify \"ServerlessConfig\" which contains two parameters MemorySizeInMB and MaxConcurrency while creating endpoint config. This is the only difference we have in Serverless endpoint otherwise everything remains same as we do in Real-time inference.\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9d09d2",
+   "id": "d1ebb5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b737d2",
+   "id": "ae6c1d71",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Get Predictions </h2>\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cb24a100",
+   "id": "604974eb",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4996d2b3",
+   "id": "00d0ff00",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Monitor Serverless GPT-2 model endpoint </h2>"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32395261",
+   "id": "42056ab7",
    "metadata": {},
    "source": [
     "The `ModelSetupTime` metric helps you to track the time (cold start time) it takes to launch new compute resources to setup Serverless endpoint. It depends on size of the model and container start up time.\n",
@@ -429,15 +429,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "448728d5",
+   "id": "b6dc8eaf",
    "metadata": {},
    "source": [
-    "<img src = \"img/se_first_invocation.png\">"
+    "<img src = \"img/se_first_invocation.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0740df2a",
+   "id": "7b2e9d6f",
    "metadata": {},
    "source": [
     "Serverless GPT-2 model endpoint is serving subsequent inference requests within 1 sec which is great news 🙌."
@@ -445,15 +445,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6db3393",
+   "id": "35b99ffc",
    "metadata": {},
    "source": [
-    "<img src = \"img/se_second_invocation.png\">"
+    "<img src = \"img/se_second_invocation.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d8628c9",
+   "id": "3ad148b4",
    "metadata": {},
    "source": [
     "Serverless endpoint utilizes 16.14% of the memory."
@@ -461,15 +461,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d02488",
+   "id": "10130dd3",
    "metadata": {},
    "source": [
-    "<img src = \"img/se_memory_utilization.png\">"
+    "<img src = \"img/se_memory_utilization.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9aa8be61",
+   "id": "aec77940",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Clean-up </h2>"
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15ef76d6",
+   "id": "9e70e43e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6786835a",
+   "id": "ba67b6e4",
    "metadata": {},
    "source": [
     "<h2 style = \"font-size:35px; font-family:Garamond ; font-weight : normal; background-color: #007580; color :#fed049   ; text-align: center; border-radius: 5px 5px; padding: 5px\"> Conclusion </h2>\n",
