Added AWS SageMaker Experiments with Weights and Biases example

--- a/05_SageMakerExperimentsWithWandB/sagemaker-experiments-with-wandb.ipynb
+++ b/05_SageMakerExperimentsWithWandB/sagemaker-experiments-with-wandb.ipynb
@@ -411,7 +411,7 @@
     "\n",
     "After creating the estimator, we then call fit(), which launches a training job. We use the Amazon S3 URIs where we uploaded the training data earlier.\n",
     "\n",
-    "<img src = \"img/sm-estimator.png\" >"
+    "<img src = \"./img/sm-estimator.png\" >"
    ]
   },
   {
