Added AWS SageMaker Experiments with Weights and Biases example

--- a/05_SageMakerExperimentsWithWandB/sagemaker-experiments-with-wandb.ipynb
+++ b/05_SageMakerExperimentsWithWandB/sagemaker-experiments-with-wandb.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "AWS SageMaker Experiments:\n",
     "\n",
-    "Some of us might have used excel sheets to keep track of training jobs, experiments (like trying different algorithms, hyperparameters etc) and performance metrics (accuracy, f1 score etc) in our data science projects.\n",
+    "We might have used notepad or excel sheets to keep track of training jobs, experiments (like trying different algorithms, hyperparameters etc) and performance metrics (accuracy, f1 score etc) in our data science projects.\n",
     "\n",
     "AWS SageMaker experiments will help us in organizing, tracking, finding the best performing model, save valuable time of data scientists and let them focus on actual ML work.\n",
     "\n",
@@ -1047,7 +1047,7 @@
     "\n",
     "- We also used the Weights and Biases to log every custom metric during our model training jobs, visualize findings, and unlock collaboration by letting anyone on our team see our experiments and build on top of them.\n",
     "\n",
-    "- Based on personal interest whether we can make use of SageMaker experiments or Weights and Biases to visualize the training history.\n",
+    "- Based on personal interest we can leverage the SageMaker experiments UI or TrainingJobAnalytics API or Weights and Biases to visualize the training history.\n",
     "\n",
     "- Finally we have to clean up SageMaker experiments and endpoint to avoid charges.\n",
     "\n",
