added sagemaker shadow deployment changes

--- a/06_SageMakerShadowDeployment/sagemaker-shadow-deployment.ipynb
+++ b/06_SageMakerShadowDeployment/sagemaker-shadow-deployment.ipynb
@@ -54,208 +54,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab6c2fc3",
-   "metadata": {},
-   "source": [
-    "### Package Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "41836e4e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/sagemaker-user/vinayak/shadow_test\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd /home/sagemaker-user/vinayak/shadow_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3bb56e03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n",
-      "model/\n",
-      "model/config.json\n",
-      "model/pytorch_model.bin\n",
-      "code/\n",
-      "code/requirements.txt\n",
-      "code/train_deploy.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "!tar -xvf \"/home/sagemaker-user/vinayak/shadow_test\"/model_v2.tar.gz -C /home/sagemaker-user/vinayak/shadow_test/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "080715e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = 'model/'\n",
-    "code_path = 'code/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3ebfc132",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/sagemaker-user/vinayak/shadow_test/model\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd /home/sagemaker-user/vinayak/shadow_test/model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "113d98c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "config.json\n",
-      "pytorch_model.bin\n"
-     ]
-    }
-   ],
-   "source": [
-    "!tar -czvf model_v2.tar.gz config.json pytorch_model.bin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "733d0ae2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/sagemaker-user/vinayak/shadow_test\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd /home/sagemaker-user/vinayak/shadow_test/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "45d491b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "rm -r -f /home/sagemaker-user/vinayak/shadow_test/model_v2.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "9e3dd251",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tarfile\n",
-    "import os\n",
-    "\n",
-    "zipped_model_path = os.path.join(model_path, \"model_v2.tar.gz\")\n",
-    "\n",
-    "with tarfile.open(zipped_model_path, \"w:gz\") as tar:\n",
-    "    tar.add(model_path)\n",
-    "    tar.add(code_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "bfb752f0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Upload tarball to S3\n",
-      "model_v2_path: s3://sagemaker-us-east-2-117843297914/sagemaker/ner/models/model_v2/model_v2.tar.gz\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Upload model artifacts to S3\n",
-    "import os\n",
-    "import sagemaker\n",
-    "\n",
-    "sagemaker_session = sagemaker.Session()\n",
-    "bucket = sagemaker_session.default_bucket()\n",
-    "prefix = \"sagemaker/ner/models/model_v2\"\n",
-    "\n",
-    "# Pytorch model\n",
-    "tar_filename = 'model_v2.tar.gz'\n",
-    "\n",
-    "# TorchScript model\n",
-    "# tar_filename = 'ner_bert.tar.gz'\n",
-    "\n",
-    "# Returns S3 bucket URL\n",
-    "print('Upload tarball to S3')\n",
-    "model_v2_path = sagemaker_session.upload_data(path=os.path.join(model_path, tar_filename), bucket=bucket, key_prefix=prefix)\n",
-    "print('model_v2_path:', model_v2_path)\n",
-    "# TorchScript model\n",
-    "# model_data = sagemaker_session.upload_data(path=tar_filename, bucket=bucket, key_prefix=prefix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "201203d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_v1_path = \"s3://sagemaker-us-east-2-117843297914/sagemaker/ner/models/model_v1/model_v1.tar.gz\"\n",
-    "model_v2_path = \"s3://sagemaker-us-east-2-117843297914/sagemaker/ner/models/model_v2/model_v2.tar.gz\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "dc34997d",
    "metadata": {},
    "source": [
@@ -267,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3987e8ec",
    "metadata": {},
    "outputs": [],
@@ -289,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ed673efb",
    "metadata": {},
    "outputs": [],
@@ -306,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "372fd2de",
    "metadata": {},
    "outputs": [],
@@ -319,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "66ec52b0",
+   "execution_count": null,
+   "id": "eb960dcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,10 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b23f6067",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prob_score': '0.7350', 'label': 'Not a disaster'}\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "import json\n",
@@ -401,14 +207,6 @@
     "\n",
     "result = json.loads(response['Body'].read())\n",
     "print(result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20b41580",
-   "metadata": {},
-   "source": [
-    "{'prob_score': '0.7350', 'label': 'Not a disaster'}"
    ]
   },
   {
@@ -426,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b26bae0d",
+   "execution_count": null,
+   "id": "04852ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,10 +297,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "d4813e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prob_score': '0.8252', 'label': 'Not a disaster'}\n",
+      "{'prob_score': '0.8272', 'label': 'Not a disaster'}\n",
+      "{'prob_score': '0.7350', 'label': 'Not a disaster'}\n",
+      "{'prob_score': '0.8160', 'label': 'Not a disaster'}\n",
+      "{'prob_score': '0.8111', 'label': 'Not a disaster'}\n",
+      "{'prob_score': '0.8492', 'label': 'Real disaster'}\n",
+      "{'prob_score': '0.8494', 'label': 'Real disaster'}\n",
+      "{'prob_score': '0.8465', 'label': 'Real disaster'}\n",
+      "{'prob_score': '0.8507', 'label': 'Real disaster'}\n",
+      "{'prob_score': '0.8502', 'label': 'Real disaster'}\n"
+     ]
+    }
+   ],
    "source": [
     "input = [\n",
     "    \"Exciting news! Our team has just launched a new product that is going to change the game in the industry. Stay tuned for more details. #innovation #success\",\n",
@@ -525,32 +340,6 @@
     "    \n",
     "    result = json.loads(response['Body'].read())\n",
     "    print(result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5920d3a2",
-   "metadata": {},
-   "source": [
-    "{'prob_score': '0.8252', 'label': 'Not a disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8272', 'label': 'Not a disaster'}\n",
-    "\n",
-    "{'prob_score': '0.7350', 'label': 'Not a disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8160', 'label': 'Not a disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8111', 'label': 'Not a disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8492', 'label': 'Real disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8494', 'label': 'Real disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8465', 'label': 'Real disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8507', 'label': 'Real disaster'}\n",
-    "\n",
-    "{'prob_score': '0.8502', 'label': 'Real disaster'}"
    ]
   },
   {
@@ -1266,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f50391d2",
+   "id": "11ae0805",
    "metadata": {},
    "outputs": [],
    "source": [
