added sagemaker shadow deployment changes

--- a/06_SageMakerShadowDeployment/sagemaker-shadow-deployment.ipynb
+++ b/06_SageMakerShadowDeployment/sagemaker-shadow-deployment.ipynb
@@ -288,6 +288,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4077e0f3",
+   "metadata": {},
+   "source": [
+    "Verify the production and shadow variants settings in AWS console.\n",
+    "\n",
+    "<img src = \"./img/prod_shadow_variants.jpg\" >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a8247706",
    "metadata": {},
    "source": [
