Added pgvector chagnes

--- a/VectorDB-PGVector/pgvector-and-huggingface.ipynb
+++ b/VectorDB-PGVector/pgvector-and-huggingface.ipynb
@@ -62,7 +62,7 @@
    ],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"OPENAI_API_KEY\"\n",
     "\n",
     "## Loading Environment Variables\n",
     "from dotenv import load_dotenv\n",
@@ -411,7 +411,7 @@
    "source": [
     "# Setup OpenAI\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"OPENAI_API_KEY\"\n",
     "\n",
     "## Loading Environment Variables\n",
     "from dotenv import load_dotenv\n",
